--- a/src/main/webapp/pages/AdminDashboard.css
+++ b/src/main/webapp/pages/AdminDashboard.css
@@ -23,18 +23,32 @@ h1,h2{
 h3{
 	color: #444;
 }
-/*.btn{
-	background:  black;
+.btn{
+	background:  grey;
 	color: white;
 	padding: 5px 10px;
 	text-align: center;
 }
 .btn:hover{
-	color: black;
+	color: grey;
 	background: white;
 	padding: 3px 8px;
 	border: 2px solid black;
-}*/
+}
+.title{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	padding: 15px 10px;
+	border-bottom: 2px solid #999;
+}
+table{
+	padding: 10px;
+}
+th,td{
+	text-align: left;
+	padding: 8px;
+}
 .side-menu{
 	position: fixed; 
 	background: grey;
@@ -61,6 +75,7 @@ h3{
 .side-menu li:hover{
 	background: white;
 	color: grey;
+	cursor: pointer;
 }
 .container{
 	position: absolute;
@@ -81,7 +96,7 @@ h3{
 	align-items: center;
 	justify-content: center;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-
+	z-index: 1;
 }
 .container .header .nav{
 	width: 90%;
@@ -170,6 +185,8 @@ h3{
 	background: white;
 	margin: 0 25px 25px 25px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	display: flex;
+	flex-direction: column;
 }
 .container .content .content-2 .new-users{
 	flex: 2;
@@ -177,4 +194,29 @@ h3{
 	min-height: 50vh;
 	margin: 0 25px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	display: flex;
+	flex-direction: column;
 }
+
+@media screen and (max-width: 1050px){
+	.side-menu li {
+		font-size: 18px;
+	}
+}
+@media screen and (max-width: 940px){
+	.side-menu span{
+		display: none;
+	}
+	.side-menu{
+		align-items: center;
+	}
+}
+@media screen and (max-width: 536px){
+	.brand-name h1{
+		font-size: 16px;
+	}
+	.container .content .cards{
+		justify-content: center;
+	}
+}
+	
